Fixed bug that made the header unstuck when scrolled past one screen.

--- a/kntnt-css-framework/kntnt-page-layout.css
+++ b/kntnt-css-framework/kntnt-page-layout.css
@@ -143,7 +143,8 @@ body > footer > * > * {
 
 html,
 body {
-  height: 100vh;
+  height: 100%;
+  overflow: auto;
 }
 
 body {
